Fix overflow-y property in styles.css

--- a/apps/next/src/styles/styles.css
+++ b/apps/next/src/styles/styles.css
@@ -108,7 +108,7 @@ html {
   /* Prevent text size change on orientation change https://gist.github.com/tfausak/2222823#file-ios-8-web-app-html-L138 */
   -webkit-text-size-adjust: 100%;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   overscroll-behavior-y: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -118,7 +118,6 @@ html {
 
 body {
   display: flex;
-  overflow-y: visible;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -184,7 +183,7 @@ body {
   height: 100%;
   position: fixed;
   /* prevent overscroll bounce*/
-  overflow-y: scroll;
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   /* iOS velocity scrolling */
 }
